# farmhand-data-api

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: build-and-tag.yml  pytest-action.yml  ruff-action.yml
alembic/: env.py
alembic/versions/: 38c412c55796_initial_migration.py  62554e655e86_add_data_uri_and_zip_filename.py  6a136406cbee_add_ingestion_status.py
config/: application.yml
src/api/: constants.py  utils.py
src/api/adapters/: __init__.py  adapters.py
src/api/core/: config.py  dependencies.py  exceptions.py  logger.py
src/api/core/db/: db_setup.py
src/api/core/db/models/: __init__.py  _model_base.py
src/api/core/repositories/: __init__.py  base_repository.py  map_repository.py
src/api/routes/: __init__.py  data_routes.py  map_routes.py  scrape_routes.py  stat_routes.py
src/api/services/: aws_service.py  file_parser_service.py  map_parsing_service.py  map_service.py  modhub_service.py
src/api/services/maps/: map_download_service.py  map_extraction_service.py  map_ingestion_service.py  map_scraping_service.py  map_service.py  map_xml_parser_service.py
src/api/tasks/: __init__.py  map_tasks.py  scheduler.py
tests/: conftest.py  utils.py
tests/api/core/schema/: test_mod_model.py
tests/api/services/: test_aws_service.py  test_map_service.py  test_modhub_service.py
tests/api/services/maps/: test_map_download_service.py  test_map_extraction_service.py  test_map_ingestion_service.py  test_map_scraping_service.py  test_map_service.py
tests/resources/: mod.html  mods.html  no_mod.html
(+9 files in other folders)
