[project]
name = "farmhand-data-api"
version = "0.1.0"
description = """
    A Data API for the Farmhand Application, interacts with the Farming Simulator ModHub,
    Mod Archives and save game .xml files.
"""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.29",
    "boto3-stubs~=1.43.29",
    "botocore>=1.43.29",
    "fastapi>=0.137.1",
    "httpx2>=2.4.0",
    "moto>=5.2.2",
    "mypy-boto3-s3>=1.43.14",
    "psycopg[binary]==3.3.4",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "strenum>=0.4.15",
    "uvicorn>=0.49.0",
]


[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
exclude = [
    "venv",
    ".venv/",
    "__pypackages__",
    ".git",
    ".pyc",
    ".tox",
    "instance",
    "__pycache__",
    ".pytest_cache/",
    ".idea",
    ".github",
    "alembic"
]

line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # handled by ruff-format
    "B904"
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
